updated the notifications and fixed some alignment issues

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,7 +2,25 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,500,700');
 
 /*all page*/
-body{margin: 0; padding: 0; font-family: 'Ubuntu', sans-serif; background-color: #C2C2C2;}
+body{margin: 0; padding: 0; font-family: 'Ubuntu', sans-serif; background-color: #C2C2C2;
+height: 100%;
+
+}
+
+.fill { 
+    min-height: 100%;
+    height: 100%;
+}
+    
+    
+    
+ #map {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    background: white;
+    display: block;
+}
 
 
 /*Login page*/
@@ -121,6 +139,13 @@ i.notification{font-size: 33px;
 .high-notification{
 	color: red;	
 }
+
+.Today{
+		font-weight: bold;
+}
+	
+
+
 
 @media(max-width:480px){
 	/*login page*/
